Bug 1323821 - Only replace texture-backed SkImage on success in SourceSurfaceSkia::GetData. r=jrmuizel, a=jcristau

MozReview-Commit-ID: FbySOGcLhwt

--HG--
extra : source : 09a4e9d9b8fa5b3ca47a9a582575db2ed38dc260